intégration contenu header et services + optimisation hn

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 
     <section class="home" id="home">
       <div class="content">
-        <h3>Création de sites internet</h3>
+        <h1>Création de sites internet pour le sport</h1>
         <p>
-          Pour les TPE, artisans, commerçants et indépendants d'Alsace
+          Besoin de créer votre site Internet lié au <b>crossfit</b>, à la <b>musculation</b>, au <b>fitness</b>, au <b>coaching sportif</b>, au <b>yoga</b>, à la <b>nutrition</b> ou tout autre <b>domaine sportif</b> ?
         </p>
-        <a href="#contact" class="btn">J'ai un projet !</a>
+        <a href="#contact" class="btn">Discutons-en !</a>
       </div>
 
       <div class="image">
-        <img src="images/home-img.png" alt="" />
+        <img src="images/home_img.svg" alt=""/>
       </div>
     </section>
 
@@ -57,39 +57,39 @@
     <!-- features section starts  -->
 
     <section class="feature" id="feature">
-      <h1 class="heading">Les services</h1>
+      <h2 class="heading">Les services</h2>
 
       <div class="box-container">
         <div class="box">
-          <img src="images/fe1.png" alt="" />
+          <img src="images/serv_creation.svg" alt="" />
           <h3>Création de site</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus id
-            eaque maxime voluptatem distinctio vero. Quibusdam necessitatibus
-            vitae autem quo.
-          </p>
+          <ul>
+            <li>Site One Page</li>
+            <li>Site Vitrine</li>
+            <li>Site E-commerce</li>
+          </ul>
           <a href="#" class="btn">En savoir plus</a>
         </div>
 
         <div class="box">
-          <img src="images/fe2.png" alt="" />
+          <img src="images/serv_maintenance.svg" alt="" />
           <h3>Maintenance de site</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus id
-            eaque maxime voluptatem distinctio vero. Quibusdam necessitatibus
-            vitae autem quo.
-          </p>
+          <ul>
+            <li>Intégration de contenu</li>
+            <li>Intégration de fonctionnalités</li>
+            <li>Mises à jour</li>
+          </ul>
           <a href="#" class="btn">En savoir plus</a>
         </div>
 
         <div class="box">
-          <img src="images/fe3.png" alt="" />
+          <img src="images/serv_optimisation.svg" alt="" />
           <h3>Optimisation de site</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus id
-            eaque maxime voluptatem distinctio vero. Quibusdam necessitatibus
-            vitae autem quo.
-          </p>
+          <ul>
+            <li>Référencement Google</li>
+            <li>Vitesse</li>
+            <li>Accessibilité</li>
+          </ul>
           <a href="#" class="btn">En savoir plus</a>
         </div>
       </div>
@@ -100,7 +100,7 @@
     <!-- service section starts  -->
 
     <section class="service" id="service">
-      <h1 class="heading">Les Fonctionnalités</h1>
+      <h2 class="heading">Les Fonctionnalités</h2>
 
       <div class="box-container">
         <div class="box">
@@ -140,15 +140,15 @@
     <!-- project section starts  -->
 
     <section class="project" id="project">
-      <h1 class="heading">Les projets</h1>
+      <h2 class="heading">Les projets</h2>
 
       <div class="box-container">
         <div class="box">
           <span class="number">01</span>
           <img src="images/rosa.png" alt="" />
           <div class="info">
-            <h3>restaurant</h3>
-            <p>site OnePage</p>
+            <h3>Site pour box de Crossfit</h3>
+            <p>site vitrine</p>
           </div>
         </div>
 
@@ -156,16 +156,16 @@
           <span class="number">02</span>
           <img src="images/opengym.png" alt="" />
           <div class="info">
-            <h3>salle de sport</h3>
+            <h3>Site pour salle de sport</h3>
             <p>site OnePage</p>
           </div>
         </div>
 
         <div class="box">
           <span class="number">03</span>
-          <img src="images/flower.png" alt="" />
+          <img src="images/projet_Yoga_Shanti.png" alt="" />
           <div class="info">
-            <h3>fleuriste</h3>
+            <h3>Site pour studio de Yoga</h3>
             <p>site OnePage</p>
           </div>
         </div>
@@ -174,7 +174,7 @@
           <span class="number">04</span>
           <img src="images/coffee.png" alt="" />
           <div class="info">
-            <h3>café</h3>
+            <h3>Site pour association sportive</h3>
             <p>site OnePage</p>
           </div>
         </div>
@@ -183,7 +183,7 @@
           <span class="number">05</span>
           <img src="images/nutritionist.png" alt="" />
           <div class="info">
-            <h3>nutritionniste</h3>
+            <h3>Site pour nutritionniste</h3>
             <p>site vitrine</p>
           </div>
         </div>
@@ -192,7 +192,7 @@
           <span class="number">06</span>
           <img src="images/coachsport.png" alt="" />
           <div class="info">
-            <h3>coach sportif</h3>
+            <h3>Site pour coach sportif</h3>
             <p>site OnePage</p>
           </div>
         </div>
@@ -204,7 +204,7 @@
     <!-- team section starts  -->
 
     <section class="team" id="team">
-      <h1 class="heading">L'équipe</h1>
+      <h2 class="heading">L'équipe</h2>
 
       <div class="box-container">
         <div class="box">
@@ -228,7 +228,7 @@
         <div class="box">
           <img src="images/profile-floppy.png" alt="" />
           <h3>Floppy</h3>
-          <span>assistant technique</span>
+          <span>chief happiness officer</span>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam
             dignissimos totam est veritatis omnis tempora, vitae enim quod
@@ -249,12 +249,12 @@
     <!-- price section starts  -->
 
     <section class="price" id="price">
-      <h1 class="heading">Les prix</h1>
+      <h2 class="heading">Les prix</h2>
 
       <div class="box-container">
         <div class="box">
           <img src="images/p1.png" alt="" />
-          <h3>template existant</h3>
+          <h3>Template existant</h3>
           <div class="amount">500<span>€</span></div>
           <p>
             Intégration de votre logo &<br>
@@ -266,7 +266,7 @@
 
         <div class="box">
           <img src="images/p3.png" alt="" />
-          <h3>maintenance</h3>
+          <h3>Maintenance</h3>
           <div class="amount">50<span>€</span></div>
           <p>
             Tarif à l'heure <br>
@@ -278,7 +278,7 @@
 
         <div class="box">
             <img src="images/p3.png" alt="" />
-            <h3>optimisation</h3>
+            <h3>Optimisation</h3>
             <div class="amount">110<span>€</span></div>
             <p>
               Audit<br>
@@ -290,7 +290,7 @@
 
           <div class="box">
             <img src="images/p2.png" alt="" />
-            <h3>sur mesure</h3>
+            <h3>Sur mesure</h3>
             <div class="amount">sur devis</div>
             <p>
               A partir de 1200€<br>
@@ -308,7 +308,7 @@
     <!-- contact section starts  -->
 
     <section class="contact" id="contact">
-      <h1 class="heading">contact</h1>
+      <h2 class="heading">contact</h2>
 
       <div class="row">
         <form action="">
@@ -351,7 +351,7 @@
     <div class="footer">
       <div class="box-container">
         <div class="box">
-          <h3>à propos</h3>
+          <h4>A propos</h4>
           <p>
             ALSACE, Haguenau <br>
             Lundi au Vendredi <br>
@@ -360,7 +360,7 @@
         </div>
 
         <div class="box">
-          <h3>liens</h3>
+          <h4>Liens</h4>
           <a href="#home">accueil</a>
           <a href="#service">fonctionnalités</a>
           <a href="#feature">services</a>
@@ -371,14 +371,14 @@
         </div>
 
         <div class="box">
-          <h3>categories</h3>
+          <h4>Categories</h4>
           <a href="#">création de site</a>
           <a href="#">maintenance de site</a>
           <a href="#">optimisation de site</a>
         </div>
 
         <div class="box">
-          <h3>nous suivre</h3>
+          <h4>Nous suivre</h4>
           <a href="#">facebook</a>
           <a href="https://twitter.com/senes_caroline">twitter</a>
           <a href="#">instagram</a>
@@ -386,9 +386,9 @@
         </div>
       </div>
 
-      <h1 class="credit">
+      <p class="credit">
         &copy; copyright by <a href="#"> Caroline SENES (ALEXANDRE) </a> @ 2021
-      </h1>
+      </p>
     </div>
 
     <!-- custom js file link  -->
